--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
+  "rnpm": {
+    "assets": [
+      "./src/fonts/"
+    ]
+  },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "expo": "~48.0.6",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
